objects/report_sender__Email_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>report_sender__Dashboard_Id__c</fullName>
        <label>Dashboard Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Email_Data__c</fullName>
        <label>Email Data</label>
        <referenceTo>report_sender__Email_Data__c</referenceTo>
        <relationshipLabel>Email Attachments</relationshipLabel>
        <relationshipName>Email_Attachments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>report_sender__File_Type__c</fullName>
        <label>File_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Folder__c</fullName>
        <label>Folder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Metadata_Filters__c</fullName>
        <label>Metadata Filters</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>report_sender__Named_Credentials__c</fullName>
        <label>Named Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Id__c</fullName>
        <label>Report ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Report_Name__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>report_sender__Unique_Key__c</fullName>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Email Attachment</label>
    <nameField>
        <displayFormat>EmailAttachment {0000}</displayFormat>
        <label>EmailAttachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>